# Engine3D-Original

./: .gitignore  CMakeLists.txt  README.md  \  compile_commands.json  configure.sh  imgui.ini  libs.cmake  main.cpp  setup.sh
2DGameParticles/: CMakeLists.txt  Game.cpp  GameLayer.cpp  GameLayer.h  ParticleSystem.cpp  ParticleSystem.h
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Debug/Sandbox-Internal/: Makefile  Sandbox-Internal  cmake_install.cmake
Debug/src/: Makefile  cmake_install.cmake
Engine3D/: Engine3DPrecompiledHeader.h
Engine3D/Core/: Application.h  EngineLogger.h  Layer.h  Window.h  core.h
Engine3D/Debug/: Instrumentor.h
Engine3D/Event/: ApplicationEvent.h  Event.h  InputPoll.h  KeyEvent.h  MouseEvent.h
Engine3D/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine3D/Graphics/: Texture.h
Engine3D/Imgui/: ImGuiLayer.h
Engine3D/OpenGL/: OpenGLBuffer.h  OpenGLBuffer3D.h  OpenGLContext.h  OpenGLContext3D.h  OpenGLFramebuffer.h  OpenGLInputPoll.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h  OpenGLWindow.h
Engine3D/Renderer/: EditorCamera.h  OrthographicCameraController.h  Renderer2D.h
Engine3D/Renderer2D/: EditorCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h
Engine3D/Renderer3D/: EditorCamera3D.h  Renderer3D.h
Engine3D/Scene/: Components.h  Entity.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
Engine3D/Scene2D/: Components.h  Entity.h  Scene.h  ScriptableEntity.h
Engine3D/interfaces/: Buffer.h  Framebuffer.h  RendererAPI.h  Shader.h  SubTexture2D.h  Texture.h  VertexArray.h
GameEngine-Editor/: CMakeLists.txt  Editor.cpp  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
GameEngine-Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHeirarchyPanel.cpp  SceneHeirarchyPanel.h
GameEngine/include/: GameEnginePrecompiledHeader.h
GameEngine/include/GameEngine/: Application.cpp  Application.h  EngineLogger.cpp  EngineLogger.h  EntryPoint.h  GameEngine.h  InputPoll.h  Layer.h  LayerStack.cpp  LayerStack.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h  core.h
GameEngine/include/GameEngine/Core/: Application.cpp  Application.h  EngineLogger.cpp  EngineLogger.h  EntryPoint.h  GameEngine.h  InputPoll.h  KeyCodes.h  Layer.h  LayerStack.h  MouseButtonCodes.h  Timer.h  Timestep.h  Window.h  core.h
GameEngine/include/GameEngine/Debug/: Instrumentor.h
GameEngine/include/GameEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
GameEngine/include/GameEngine/Imgui/: ImGuiLayer.cpp  ImGuiLayer.h
GameEngine/include/GameEngine/Math/: Math.cpp  Math.h
GameEngine/include/GameEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.h  RendererCommand.cpp  RendererContext.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
GameEngine/include/GameEngine/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  (+3 more)
NOTES.review/23_RefsScropesAndSmartPtsNOTES/: RefsScopesAndSmartPointersNOTES.md
NOTES.review/28_building2DRendererNOTES/: Building2DRendererNOTES.md
NOTES.review/29_CameraControllersNOTES/: CameraControllerNOTES.md
NOTES.review/38_VisualProfilingNOTES/: visualProfiling.md
NOTES.review/40_BatchRenderingNOTES/: BatchRendering.md
NOTES.review/Design.1/: DesignGameEngine.1
NOTES.review/EntryPoint.2/: EntryPointNOTES.md
NOTES.review/Events.4/: EventsNOTES.md
NOTES.review/InputPollingNotes.10/: InputPollingNOTES.md
NOTES.review/RenderFlowAndSubmissionNotes.18/: RenderFlowAndSubmissionNOTES.md
NOTES.review/RenderingAPIs.15/: RenderingAPINOTES.md
NOTES.review/imguiNotes.9/: imguiNOTES.md
NOTES.review/notes.8/: imguiNOTES.md
RocketGame/: Game.cpp  GameLayer.cpp  Level.cpp  Player.cpp
Sandbox/: Application.cpp  CMakeLists.txt  ExampleLayer.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  main.cpp
Sandbox-Internal/: Application.cpp  CMakeLists.txt  ExampleLayer3D.h  cmake_install.cmake
assets/shaders/: texture.glsl  texture1.glsl
cmake/: fmt.cmake  glad.cmake  glfw.cmake  imgui.cmake  linux.cmake  localModules.cmake  macModules.cmake  nfd.cmake  unix.cmake  vulkan.cmake  win32.cmake  yaml.cmake
cmake/linux/: glad.cmake  glfw.cmake  imgui.cmake
cmake/modules/: GameEngineConfig.cmake  colors.cmake  glad.cmake  imgui.cmake
cmake/unix/: locals.cmake
cmake/unix/libs/: fmt.cmake  glfw.cmake
cmake/unix/locals/: imgui.cmake  stbi_image.cmake
src/: CMakeLists.txt  cmake_install.cmake
src/Engine3D/Core/: Application.cpp  EntryPoint.cpp  InputPoll.cpp
src/Engine3D/Event/: InputPoll.cpp
src/Engine3D/Events/: InputPoll.cpp
src/Engine3D/Imgui/: ImGuiLayer.cpp
src/Engine3D/Math/: Math.cpp
src/Engine3D/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer3D.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLInputPoll.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLWindow.cpp
src/Engine3D/Renderer/: OrthographicCamera.cpp  OrthographicCameraController.cpp  Renderer2D.cpp
src/Engine3D/Renderer2D/: EditorCamera.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  Renderer.cpp  Renderer2D.cpp  RendererCommand.cpp
src/Engine3D/Renderer3D/: Renderer3D.cpp
src/Engine3D/Scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
src/Engine3D/Scene copy/: Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
src/Engine3D/Scene2D/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
src/Engine3D/image/: stb_image.cpp
src/Engine3D/interfaces/: Buffer.cpp  Framebuffer.cpp  RendererAPI.cpp  Shader.cpp  SubTexture2D.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp
(+20 files in other folders)
